fix vertical spacing on list, body

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+ul {
+  margin: none;
+}
+body {
+  margin: 0;
+}
+
 header {
   background-color: green;
 }
